--- a/public/gallery.html
+++ b/public/gallery.html
@@ -145,7 +145,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Your Website 2019</span>
+          <span class="copyright">Copyright &copy; 2ndChances 2019</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
