--- a/public/InputForm.html
+++ b/public/InputForm.html
@@ -97,7 +97,7 @@
               <div class="clearfix"></div>
               <div class="col-lg-12 text-center">
                 <div id="success"></div>
-                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Info</button>
+                <button id="submitBtn" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Info</button>
               </div>
             </div>
           </form>
@@ -155,11 +155,11 @@
 
   <!-- Contact form JavaScript -->
   <script src="styles/js/jqBootstrapValidation.js"></script>
-  <script src="styles/js/contact_me.js"></script>
 
   <!-- Custom scripts for this template -->
   <script src="styles/js/agency.min.js"></script>
-
+  
+  <script src="js/index.js"></script>
 </body>
 
 </html>
